--- a/FS18-NTPQUOC-FE/Buoi_6 (10062023)/w3School-band/index.html
+++ b/FS18-NTPQUOC-FE/Buoi_6 (10062023)/w3School-band/index.html
@@ -14,7 +14,7 @@
             <li><a href="">HOME</a></li>
             <li><a href="">BAND</a></li>
             <li><a href="">TOUR</a></li>
-            <li><a href="">CONTACT</a></li>
+            <li><a href="">CONTACt</a></li>
             <li>
                 <a href="">MORE</a>
                 <ul class="subnav">
@@ -25,7 +25,7 @@
             </li>
         </ul>
         </div>
-        <div id="slider">
+        <div id="slider">   
 
         </div>
         <div id="content">
